# slack-agent

./: README.md  pyproject.toml
slack_agent/: __init__.py  agent.py  cli.py  docs_index.py
