[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slack-agent-ai"
version = "0.1.0"
description = "AI-powered Slack bot that answers questions from docs, summarizes threads, and routes requests."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["slack", "bot", "anthropic", "claude", "ai", "agent"]

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "rich>=13.0",
    "slack-bolt>=1.18",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "mypy>=1.10",
    "ruff>=0.4",
]

[project.scripts]
slack-agent = "slack_agent.cli:main"

[project.urls]
Repository = "https://github.com/yourorg/slack-agent-ai"

[tool.hatch.build.targets.wheel]
packages = ["slack_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
